# SENSEI

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  LICENSE  README.md  STATUS_README.md  THIRDPARTY_SOFTWARE_LICENSES  build_cori_libsim  package.json  senseiConfig.h.in
analysis/autocorrelation/: AutocorrelationAnalysisAdaptor.cxx  AutocorrelationAnalysisAdaptor.h  CMakeLists.txt
analysis/configurable/: ;  CMakeLists.txt  vtkConfigurableAnalysisAdaptor.cxx  vtkConfigurableAnalysisAdaptor.h
analysis/histogram/: CMakeLists.txt  HistogramAnalysisAdaptor.cxx  HistogramAnalysisAdaptor.h  vtk_histogram.cxx
core/: CMakeLists.txt  vtkInsituAnalysisAdaptor.cxx  vtkInsituAnalysisAdaptor.h  vtkInsituDataAdaptor.cxx  vtkInsituDataAdaptor.h
endpoints/: ADIOS1EndPoint.cpp  ADIOS2EndPoint.cpp  ADIOSAnalysisEndPoint.cxx  CMakeLists.txt  ConfigurableEndPoint.cxx  HDF5EndPoint.cpp  PosthocIOEndPoint.cxx  README.md  SENSEIEndPoint.cpp  libISEndPoint.cpp
histogram/: CMakeLists.txt  HistogramAnalysisAdaptor.cxx  HistogramAnalysisAdaptor.h  histogram.h  vtk_histogram.cxx  vtk_histogram.h
infrastructures/catalyst/: CMakeLists.txt  vtkCatalystAnalysisAdaptor.cxx  vtkCatalystAnalysisAdaptor.h  vtkCatalystSlicePipeline.cxx  vtkCatalystSlicePipeline.h  vtkCatalystUtilities.h
miniapps/: CMakeLists.txt
miniapps/ascent_test/: CMakeLists.txt  ascent_render_example.cpp  run.sh
miniapps/conduit_test/: AscentActionsBasic.json  AscentActionsBraid.json  AscentActionsJulia.json  AscentActionsPolytess.json  AscentActionsSpiral.json  CMakeLists.txt  ConduitTestBasic.xml  ConduitTestBasicJson.xml  ConduitTestBraidJson.xml  ConduitTestJulia.xml  ConduitTestJuliaJson.xml  ConduitTestPolytess.xml  ConduitTestPolytessJson.xml  ConduitTestSpiral.xml  ConduitTestSpiralJson.xml  bridge.cpp  bridge.h  conduitTest.cpp  run.sh
miniapps/kripke/: CMakeLists.txt  Kripke.h  bridge.cpp  bridge.h
miniapps/lammps/: CMakeLists.txt  lammpsBridge.cxx  lammpsBridge.h  lammpsDataAdaptor.cxx  lammpsDataAdaptor.h  lammpsDriver.cxx
miniapps/mandelbrot/: CMakeLists.txt  MandelbrotDataAdaptor.cpp  MandelbrotDataAdaptor.h  mandelbrot.cpp  patch.cpp  patch.h  simulation_data.cpp  simulation_data.h
miniapps/newton/: README.md  newton.py  newton_catalyst.py
miniapps/nyx/: nyx_sensei_bridge.cpp  nyx_sensei_bridge.h  nyx_sensei_dataadaptor.cpp  nyx_sensei_dataadaptor.h
miniapps/oscillators/: Block.cpp  Block.h  BlockInternals.cpp  BlockInternals.h  CMakeLists.txt  DataAdaptor.cpp  DataAdaptor.h  Grid.h  Oscillator.cpp  Oscillator.h  Particles.cpp  Particles.h  README.md  analysis.cpp  bridge.cpp  bridge.h  dataadaptor.cpp  dataadaptor.h  main.cpp  oscillator.cpp  oscillator.h  particles.h
miniapps/parallel3d/: Bridge.cxx  Bridge.h  CMakeLists.txt  DataAdaptor.cxx  DataAdaptor.h  README.md  histogram.cpp  histogram.h  parallel3d.c  parallel_3D.c
miniapps/vortex/: CMakeLists.txt  VortexDataAdaptor.cpp  VortexDataAdaptor.h  patch.cpp  patch.h  run_vortex.sh  simulation_data.cpp  simulation_data.h  vortex.cpp
oscillators/: CMakeLists.txt  bridge.cpp  bridge.h  dataadaptor.cpp  oscillator.cpp  oscillator.h
parallel3d/: Bridge.h  CMakeLists.txt  DataAdaptor.cxx  DataAdaptor.h  insitu_bridge.cpp  insitu_bridge.h  parallel_3D.c
python/: CMakeLists.txt  sensei.py  senseiDataAdaptor.i  senseiPyArray.h  senseiPyDataAdaptor.h  senseiPyGILState.h  senseiPyInteger.h  senseiPyObject.h  senseiPySequence.h  senseiPyString.h  senseiPython.i  senseiSTL.i  senseiTypeMaps.i  vtk.i
sensei/: ADIOS1AnalysisAdaptor.cxx  ADIOS1AnalysisAdaptor.h  ADIOS1DataAdaptor.cxx  ADIOS1DataAdaptor.h  ADIOS1Schema.cxx  ADIOS1Schema.h  ADIOS2AnalysisAdaptor.cxx  ADIOS2AnalysisAdaptor.h  ADIOS2DataAdaptor.cxx  ADIOS2DataAdaptor.h  ADIOS2Schema.cxx  ADIOS2Schema.h  ADIOSAnalysisAdaptor.cxx  ADIOSAnalysisAdaptor.h  ADIOSDataAdaptor.cxx  ADIOSDataAdaptor.h  ADIOSSchema.cxx  ADIOSSchema.h  AMReXYtAnalysis.py  ASCENT_README  AnalysisAdaptor.cxx  AnalysisAdaptor.h  AscentAnalysisAdaptor.cxx  AscentAnalysisAdaptor.h  AscentSchema.cxx  AscentSchema.h  Autocorrelation.cxx  Autocorrelation.h  BinaryStream.cxx  BinaryStream.h  BlockPartitioner.cxx  BlockPartitioner.h  CDFReducer.cxx  CDFReducer.h  CMakeLists.txt  CUDAUtils.cu  CUDAUtils.cxx  CUDAUtils.h  Calculator.cxx  Calculator.h  (+146 more)
sensei/adios/: AnalysisAdaptor.cxx  AnalysisAdaptor.h  CMakeLists.txt  DataAdaptor.cxx  DataAdaptor.h
sensei/catalyst/: AnalysisAdaptor.cxx  AnalysisAdaptor.h  Slice.cxx  Slice.h  Utilities.h
sensei/libsim/: AnalysisAdaptor.cxx  AnalysisAdaptor.h  ImageProperties.cxx  ImageProperties.h
sensei/testing/: CMakeLists.txt  catalyst_render_partition.xml  catalyst_render_partition.xml.in  catalyst_render_receiver_partition.py  catalyst_render_sender_partition.py  fft_configuration.xml  fft_python_configuration.xml  fft_python_endpoint.py  histogram.xml  read_adios1_bp_block.xml  read_adios1_bp_default.xml  read_adios1_bp_mapped_checker.xml  read_adios1_bp_mapped_checker_subset.xml  read_adios1_bp_mapped_ring.xml  read_adios1_bp_mapped_subset.xml  read_adios1_bp_planar_1.xml  read_adios1_bp_planar_2.xml  read_adios1_bp_planar_3.xml  read_adios1_flexpath_block.xml  read_adios1_flexpath_default.xml  read_adios1_flexpath_mapped_checker.xml  read_adios1_flexpath_mapped_ring.xml  read_adios1_flexpath_planar_1.xml  read_adios1_flexpath_planar_2.xml  read_adios1_flexpath_planar_3.xml  read_adios2_bp4_block.xml  read_adios2_bp4_default.xml  read_adios2_bp4_mapped_checker.xml  read_adios2_bp4_mapped_checker_subset.xml  read_adios2_bp4_mapped_ring.xml  read_adios2_bp4_planar_2.xml  read_adios2_bp4_planar_3.xml  read_adios2_sst_block.xml  read_adios2_sst_default.xml  read_adios2_sst_mapped_checker.xml  read_adios2_sst_mapped_ring.xml  read_adios2_sst_planar_2.xml  read_adios2_sst_planar_3.xml  read_h5_block.xml  read_h5_default.xml  (+44 more)
sensei/vtk/: DataAdaptor.cxx  DataAdaptor.h
tools/sensei_config/: CMakeLists.txt  README.md  make_install  sensei_config.in
utils/: CMakeLists.txt  HAMRconfig.cmake  SVTKconfig.cmake
utils/ArrayIO/: ArrayIO.cxx  ArrayIO.h  CMakeLists.txt  (+1 more)
(+1806 files in other folders)
