cmake_minimum_required(VERSION 3.6)
if (POLICY CMP0074)
  cmake_policy(SET CMP0074 OLD)
endif()
project(sensei)

include(CMakeDependentOption)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")

include(options)
include(cuda)
include(build)
include(threads)
include(mpi)
include(svtk)
include(adios)
include(adios2)
include(hdf5)
#include(vtk)
include(libsim)
include(catalyst)
include(vtkm)
include(conduit)
include(ascent)
include(opts)
include(python)
include(version)
include(config)
include(testing)

add_subdirectory(utils)
add_subdirectory(sensei)
add_subdirectory(miniapps)
add_subdirectory(endpoints)
add_subdirectory(python)
