cmake_minimum_required(VERSION 3.6)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
include(policies)
project(sensei)

include(options)
include(cuda)
include(build)
include(threads)
include(mpi)
include(svtk)
# Ascent needs to to be called first.
include(ascent)
include(adios)
include(adios2)
include(hdf5)
include(vtk)
include(libsim)
include(catalyst)
include(vtkm)
include(conduit)
include(opts)
include(ospray)
include(python)
include(version)
include(config)
include(testing)

add_subdirectory(utils)
add_subdirectory(sensei)
add_subdirectory(miniapps)
add_subdirectory(endpoints)
add_subdirectory(python)
