if(ENABLE_CONDUITTEST)
  message(STATUS "Enabled: CONDUIT TEST miniapp.")
  add_subdirectory(conduit_test)
else()
  message(STATUS "Disabled: conduit_test miniapp.")
endif()

if(ENABLE_OSCILLATORS)
  message(STATUS "Enabled: Oscillators miniapp.")
  add_subdirectory(oscillators)
else()
  message(STATUS "Disabled: Oscillators miniapp.")
endif()

if(ENABLE_KRIPKE)
  message(STATUS "Enabled: Kripke miniapp")
  add_subdirectory(kripke)
else()
  message(STATUS "Disabled: Kripke miniapp")
endif()

if(ENABLE_MANDELBROT)
  message(STATUS "Enabled: Mandelbrot miniapp.")
  add_subdirectory(mandelbrot)
else()
  message(STATUS "Disabled: Mandelbrot miniapp.")
endif()

if(ENABLE_VORTEX)
  message(STATUS "Enabled: Vortex miniapp.")
  add_subdirectory(vortex)
else()
  message(STATUS "Disabled: Vortex miniapp.")
endif()
