if(ENABLE_CONDUITTEST)
  message(STATUS "SENSEI: Enabled: Conduit miniapp.")
  add_subdirectory(conduit_test)
else()
  message(STATUS "SENSEI: Disabled: conduit miniapp.")
endif()

if(ENABLE_OSCILLATORS)
  message(STATUS "SENSEI: Enabled: Oscillators miniapp.")
  add_subdirectory(oscillators)
else()
  message(STATUS "SENSEI: Disabled: Oscillators miniapp.")
endif()

if(ENABLE_KRIPKE)
  message(STATUS "SENSEI: Enabled: Kripke miniapp")
  add_subdirectory(kripke)
else()
  message(STATUS "SENSEI: Disabled: Kripke miniapp")
endif()

if(ENABLE_MANDELBROT)
  message(STATUS "SENSEI: Enabled: Mandelbrot miniapp.")
  add_subdirectory(mandelbrot)
else()
  message(STATUS "SENSEI: Disabled: Mandelbrot miniapp.")
endif()

if(ENABLE_VORTEX)
  message(STATUS "SENSEI: Enabled: Vortex miniapp.")
  add_subdirectory(vortex)
else()
  message(STATUS "SENSEI: Disabled: Vortex miniapp.")
endif()

