add_library(configurable STATIC vtkConfigurableAnalysisAdaptor.cxx)
target_link_libraries(configurable PUBLIC mpi core PRIVATE pugixml)
target_include_directories(configurable INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

if(VTK_HAS_GENERIC_ARRAYS)
  target_link_libraries(configurable PRIVATE histogram)
  target_compile_options(configurable PRIVATE ENABLE_HISTOGRAM)
endif()
target_link_libraries(configurable PRIVATE autocorrelation)

if(ENABLE_CATALYST)
  target_link_libraries(configurable PRIVATE catalyst)
endif()
if(ENABLE_ADIOS)
  target_link_libraries(configurable PRIVATE adios)
endif()
